Added History Page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <button class="l drum">l</button>
   </div>
 
-
+    <a href="history.html">History</a>
   <footer>
     Made with ❤️ in London.
   </footer>
