--- a/history.html
+++ b/history.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <h1>My History</h1>
+        <p> <b>Virat Kohli</b> (born 5 November 1988) is an Indian international cricketer who plays Test and ODI cricket for the national team and is a former captain in all formats. He is a right-handed batsman and an occasional right arm medium pace bowler. He is called the king, the chase master and the run machine for his playing style, records and ability to lead the team to victory. Kohli is the highest run-scorer in the Indian Premier League, third in T20I, third in ODI, and third in international cricket. Regarded as one of the greatest batsmen of all time, he holds the record for the most ODI centuries and has the second most centuries in international cricket. He is the first and only batsman to cross 10,000 runs in chases. Kohli is also the only captain to lead India to three consecutive Test mace wins during 2017, 2018, and 2019.</p>
+    </body>
+</html>
